# postie-rs

./: .rust-analyzer.json  Cargo.toml  Dioxus.toml  README.md  clippy.toml
assets/: main.css
src/: api.rs  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: body_view.rs  content_header.rs  content_view.rs  mod.rs  request_bar.rs  request_view.rs  side_bar.rs  top_bar.rs
src/models/: header.rs  method.rs  mod.rs  tab.rs
